[package]
name = "extending-jax"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "cpu_ops"
crate-type = ["cdylib"]

[dependencies]
num-traits = "0.2.17"
pyo3 = { version = "0.19.0", features = ["extension-module"] }
