[project]
name = "kepler_jax"
version = "0.1.0"
description = "A simple demonstration of how you can extend JAX with custom Rust ops"
authors = [
    { name = "Akishika Issui", email = "kshkss@users.noreply.github.com" }
]
dependencies = [
    "jax>=0.4.13",
    "jaxlib>=0.4.13",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["maturin>=1.2,<2.0"]
build-backend = "maturin"

[tool.rye]
managed = true
dev-dependencies = [
    "pytest>=7.4.4",
]

[tool.maturin]
python-source = "python"
module-name = "kepler_jax.cpu_ops"
features = ["pyo3/extension-module"]
